--- a/tmc2209_4pack_XYZ.yaml
+++ b/tmc2209_4pack_XYZ.yaml
@@ -9,10 +9,10 @@ stepping:
 axes:
   shared_stepper_disable_pin: NO_PIN
   x:
-    steps_per_mm: 1600
-    max_rate_mm_per_min: 200
+    steps_per_mm: 800
+    max_rate_mm_per_min: 250
     acceleration_mm_per_sec2: 25
-    max_travel_mm: 60
+    max_travel_mm: 68
     soft_limits: true
     homing:
       cycle: 1
@@ -48,23 +48,23 @@ axes:
         run_mode: StealthChop
         homing_mode: StealthChop
         use_enable: false
-        direction_pin: i2so.1
+        direction_pin: i2so.1:low
         step_pin: i2so.2
         disable_pin: i2so.0
 
 
   y:
-    steps_per_mm: 1600
-    max_rate_mm_per_min: 200
+    steps_per_mm: 800
+    max_rate_mm_per_min: 250
     acceleration_mm_per_sec2: 25
-    max_travel_mm: 60
+    max_travel_mm: 85
     soft_limits: true
     homing:
       cycle: 1
       mpos_mm: 0
       positive_direction: false
-      seek_mm_per_min: 3000
-      feed_mm_per_min: 240
+      seek_mm_per_min: 100
+      feed_mm_per_min: 100
 
     motor0:
       hard_limits: false
@@ -85,7 +85,7 @@ axes:
         run_mode: StealthChop
         homing_mode: StealthChop
         use_enable: false
-        direction_pin: i2so.4
+        direction_pin: i2so.4:low
         step_pin: i2so.5
         disable_pin: i2so.7
 
@@ -109,9 +109,9 @@ axes:
       tmc_2209:
         addr: 2
         r_sense_ohms: 0.110
-        run_amps: 0.1
-        hold_amps: 0.100
-        microsteps: 8
+        run_amps: 0.15
+        hold_amps: 0.05
+        microsteps: 32
         stallguard: 0
         stallguard_debug: false
         toff_disable: 0
@@ -144,3 +144,16 @@ i2so:
   bck_pin: gpio.22
   data_pin: gpio.21
   ws_pin: gpio.17
+
+
+PWM:
+  pwm_hz: 100000
+  output_pin: gpio.13
+  enable_pin: NO_PIN
+  direction_pin: NO_PIN
+  disable_with_s0: false
+  s0_with_disable: true
+  spinup_ms: 1000
+  spindown_ms: 1000
+  tool_num: 0
+  speed_map: 0=0.000% 1000=100.000%
