--- a/TMC2130_pen.yaml
+++ b/TMC2130_pen.yaml
@@ -13,8 +13,8 @@ axes:
   
   x:
     steps_per_mm: 800
-    max_rate_mm_per_min: 100
-    acceleration_mm_per_sec2: 25
+    max_rate_mm_per_min: 1000
+    acceleration_mm_per_sec2: 100
     max_travel_mm: 1000
     soft_limits: false
     homing:
@@ -35,8 +35,8 @@ axes:
         step_pin: gpio.12
         cs_pin: gpio.17
         r_sense_ohms: 0.110
-        run_amps: .25
-        hold_amps: .25
+        run_amps: .5
+        hold_amps: .5
         microsteps: 32
         stallguard: 0
         stallguard_debug: false
@@ -50,8 +50,8 @@ axes:
 
   y:
     steps_per_mm: 800
-    max_rate_mm_per_min: 100
-    acceleration_mm_per_sec2: 25
+    max_rate_mm_per_min: 1000
+    acceleration_mm_per_sec2: 100
     max_travel_mm: 1000
     soft_limits: false
     homing:
@@ -65,7 +65,24 @@ axes:
       feed_scaler: 1.100
 
     motor0:
-      null_motor:
+      #limit_pos_pin: gpio.32:low:pu
+      limit_pos_pin: NO_PIN
+      tmc_2130:
+        direction_pin: gpio.25
+        step_pin: gpio.14
+        cs_pin: gpio.16
+        r_sense_ohms: 0.110
+        run_amps: .5
+        hold_amps: .5
+        microsteps: 32
+        stallguard: 0
+        stallguard_debug: false
+        toff_disable: 0
+        toff_stealthchop: 5
+        toff_coolstep: 3
+        run_mode: StealthChop
+        homing_mode: StealthChop
+        use_enable: false
 
 
   z:
