--- a/tmc2209_4pack_XYZ.yaml
+++ b/tmc2209_4pack_XYZ.yaml
@@ -1,116 +1,116 @@
 stepping:
   engine: I2S_STREAM
-  idle_ms: 255
+  idle_ms: 250
   dir_delay_us: 1
   pulse_us: 4
   disable_delay_us: 0
 
+uart1:
+  txd_pin: gpio.16
+  rxd_pin: gpio.4
+  rts_pin: NO_PIN
+  cts_pin: NO_PIN
+  baud: 115200
+  mode: 8N1
 
 axes:
   shared_stepper_disable_pin: NO_PIN
+
   x:
-    steps_per_mm: 800
-    max_rate_mm_per_min: 200
-    acceleration_mm_per_sec2: 15
-    max_travel_mm: 68
-    soft_limits: false
+    steps_per_mm: 5333
+    max_rate_mm_per_min: 1200
+    acceleration_mm_per_sec2: 150
+    max_travel_mm: 100
+    soft_limits: true
     homing:
       cycle: 1
       mpos_mm: 0
       positive_direction: false
-      seek_mm_per_min: 100
-      feed_mm_per_min: 100
+      seek_mm_per_min: 500
+      feed_mm_per_min: 250
 
     motor0:
-      limit_neg_pin: gpio.25:pu
+      limit_neg_pin: gpio.36:low
       limit_pos_pin: NO_PIN
       limit_all_pin: NO_PIN
-      hard_limits: false
       tmc_2209:
-        uart:
-          txd_pin: gpio.16
-          rxd_pin: gpio.4
-          rts_pin: NO_PIN
-          cts_pin: NO_PIN
-          baud: 115200
-          mode: 8N1
-
+        uart_num: 1
         addr: 0
         r_sense_ohms: 0.110
-        run_amps: 0.25
-        hold_amps: 0.25
+        run_amps: 0.5
+        hold_amps: 0.1
         microsteps: 32
         stallguard: 0
         stallguard_debug: false
         toff_disable: 0
         toff_stealthchop: 5
         toff_coolstep: 3
-        run_mode: StealthChop
-        homing_mode: StealthChop
+        run_mode: CoolStep
+        homing_mode: CoolStep
         use_enable: false
-        direction_pin: i2so.1:low
+        direction_pin: i2so.1
         step_pin: i2so.2
         disable_pin: i2so.0
 
-
   y:
-    steps_per_mm: 800
-    max_rate_mm_per_min: 200
-    acceleration_mm_per_sec2: 15
-    max_travel_mm: 85
-    soft_limits: false
+    steps_per_mm: 5333
+    max_rate_mm_per_min: 1200
+    acceleration_mm_per_sec2: 150
+    max_travel_mm: 80
+    soft_limits: true
+
     homing:
       cycle: 1
       mpos_mm: 0
       positive_direction: false
-      seek_mm_per_min: 100
-      feed_mm_per_min: 100
+      seek_mm_per_min: 500
+      feed_mm_per_min: 250
 
     motor0:
-      hard_limits: false
-      limit_neg_pin: gpio.26:pu
+      limit_neg_pin: gpio.34:low
       limit_pos_pin: NO_PIN
       limit_all_pin: NO_PIN
       tmc_2209:
+        uart_num: 1
         addr: 1
         r_sense_ohms: 0.110
-        run_amps: 0.25
-        hold_amps: 0.25
+        run_amps: 0.5
+        hold_amps: 0.1
         microsteps: 32
         stallguard: 0
         stallguard_debug: false
         toff_disable: 0
         toff_stealthchop: 5
         toff_coolstep: 3
-        run_mode: StealthChop
-        homing_mode: StealthChop
+        run_mode: CoolStep
+        homing_mode: CoolStep
         use_enable: false
-        direction_pin: i2so.4:low
+        direction_pin: i2so.4
         step_pin: i2so.5
         disable_pin: i2so.7
 
-
   z:
-    steps_per_mm: 400
-    max_rate_mm_per_min: 50
-    acceleration_mm_per_sec2: 25
-    max_travel_mm: 30
+    steps_per_mm: 6400
+    max_rate_mm_per_min: 100
+    acceleration_mm_per_sec2: 55
+    max_travel_mm: 200
     homing:
-      cycle: 0
+      cycle: -1
       mpos_mm: 0
       positive_direction: false
       seek_mm_per_min: 200
       feed_mm_per_min: 100
 
     motor0:
-      limit_neg_pin: gpio.27:pu
+      limit_neg_pin: gpio.39:low
       limit_pos_pin: NO_PIN
       limit_all_pin: NO_PIN
       tmc_2209:
+        uart_num: 1
         addr: 2
         r_sense_ohms: 0.110
-        run_amps: 0.1
-        hold_amps: 0.100
+        run_amps: 0.25
+        hold_amps: 0.1
         microsteps: 32
         stallguard: 0
         stallguard_debug: false
@@ -130,17 +130,46 @@ axes:
     acceleration_mm_per_sec2: 25
     max_travel_mm: 200
     homing:
-      cycle: 0
+      cycle: -1
       mpos_mm: 0
       positive_direction: false
       seek_mm_per_min: 200
       feed_mm_per_min: 100
 
     motor0:
-      null_motor:
- 
+      limit_neg_pin: NO_PIN
+      limit_pos_pin: gpio.35:low
+      limit_all_pin: NO_PIN
+      tmc_2209:
+        uart_num: 1
+        addr: 3
+        r_sense_ohms: 0.110
+        run_amps: 1.000
+        hold_amps: 0.500
+        microsteps: 32
+        stallguard: 0
+        stallguard_debug: false
+        toff_disable: 0
+        toff_stealthchop: 5
+        toff_coolstep: 3
+        run_mode: StealthChop
+        homing_mode: StealthChop
+        use_enable: false
+        direction_pin: i2so.12
+        step_pin: i2so.13
+        disable_pin: i2so.15
+
+spi:
+  miso_pin: gpio.19
+  mosi_pin: gpio.23
+  sck_pin: gpio.18
 
 i2so:
   bck_pin: gpio.22
   data_pin: gpio.21
   ws_pin: gpio.17
+
+sdcard:
+  cs_pin: gpio.5
+  card_detect_pin: NO_PIN
+
