grab changes from device

--- a/tmc2209_4pack_XYZ.yaml
+++ b/tmc2209_4pack_XYZ.yaml
@@ -17,17 +17,17 @@ axes:
   shared_stepper_disable_pin: NO_PIN
 
   x:
-    steps_per_mm: 5333
-    max_rate_mm_per_min: 1200
-    acceleration_mm_per_sec2: 150
-    max_travel_mm: 100
-    soft_limits: true
+    steps_per_mm: 800
+    max_rate_mm_per_min: 1000
+    acceleration_mm_per_sec2: 50
+    max_travel_mm: 60
+    soft_limits: false
     homing:
       cycle: 1
       mpos_mm: 0
       positive_direction: false
-      seek_mm_per_min: 500
-      feed_mm_per_min: 250
+      seek_mm_per_min: 250
+      feed_mm_per_min: 100
 
     motor0:
       limit_neg_pin: gpio.36:low
@@ -48,22 +48,22 @@ axes:
         run_mode: CoolStep
         homing_mode: CoolStep
         use_enable: false
-        direction_pin: i2so.1
+        direction_pin: i2so.1:low
         step_pin: i2so.2
         disable_pin: i2so.0
 
   y:
-    steps_per_mm: 5333
-    max_rate_mm_per_min: 1200
-    acceleration_mm_per_sec2: 150
-    max_travel_mm: 80
-    soft_limits: true
+    steps_per_mm: 4800
+    max_rate_mm_per_min: 1000
+    acceleration_mm_per_sec2: 25
+    max_travel_mm: 100
+    soft_limits: false
 
     homing:
       cycle: 1
       mpos_mm: 0
       positive_direction: false
-      seek_mm_per_min: 500
+      seek_mm_per_min: 100
       feed_mm_per_min: 250
 
     motor0:
@@ -74,7 +74,7 @@ axes:
         uart_num: 1
         addr: 1
         r_sense_ohms: 0.110
-        run_amps: 0.5
+        run_amps: 0.25
         hold_amps: 0.1
         microsteps: 32
         stallguard: 0
@@ -92,7 +92,7 @@ axes:
   z:
     steps_per_mm: 6400
     max_rate_mm_per_min: 100
-    acceleration_mm_per_sec2: 55
+    acceleration_mm_per_sec2: 25
     max_travel_mm: 200
     homing:
       cycle: -1
